# nglview

./: .coveragerc  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Dockerfile-jupyterlab  MANIFEST.in  Makefile  README.md  circle.yml  conda-requirements-test.sh  conda-requirements.sh  conda-requirements.txt  environment.yml  index.html  nglview-js-widgets.json  nightwatch.json  pip-requirements-test.txt  pyproject.toml  requirements-test.txt  requirements.txt  run_tests.sh  setup.cfg  setup.py  talks.md
.github/: ISSUE_TEMPLATE.md  deploy.yml  nglview-gha.yml
binder/: environment.yml  postBuild  requirements.txt  runtime.txt
data/: ala3.dcd  md_1u19.gro  md_1u19.xtc
dev/: .buildinfo  CHANGELOG.html  api.html  contributing.html  genindex.html  index.html  interface_classes.html  ngl_player.html  objects.inv  py-modindex.html  scripts.html  search.html  searchindex.js  talks.html  test.html  two_windows.html
devtools/: Dockerfile  README.release  build_docker.sh  create_labextension_symlink.py  gif.py  gifipy.py  install-dev.sh  make_test_js.py  nglview-jupyterlab.sh  release.py  update_versions.py
doc/: CHANGELOG.rst  Makefile  api.rst  conf.py  contributing.rst  index.md  index.rst  interface_classes.md  interface_classes.rst  make.bat  md_1u19.txt  ngl_player.html  talks.rst  two_windows.rst
docs/: FAQ.md  Makefile  README.md  conf.py  embed.md  index.md  index.rst  talks  talks.rst  test.rst  view_demo.html
examples/: README.md  customize_color.md  jupyterlab.md  mdanalysis.md  mdtraj.md  parmed.md  (+7 more)
(+792 files in other folders)
